[CORRECTION][RESTITUTION] Aligne les sous-titres sur la même colonne que les titres de sections

--- a/mon-aide-cyber-ui/src/assets/styles/_restitution.scss
+++ b/mon-aide-cyber-ui/src/assets/styles/_restitution.scss
@@ -169,6 +169,10 @@ html {
 }
 
 #contacts-liens-utiles {
+  .fr-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
   padding-top: 2.5rem;
 
   display: flex;
